--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body{
   margin: 2rem 3rem 0px 3rem
 }
 
+p{
+  font-size: 14px;
+}
+
 h1{
   font-weight: 400; 
   margin: 0;
@@ -21,7 +25,7 @@ h1{
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   column-gap: 3rem;
-  height: 100vh;
+  height: 80vh;
   }
 
 .skinTypeWrapper img{
@@ -98,3 +102,21 @@ select{
 .products h2{
   text-align: center;
 }
+
+input[type=text]{
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+textarea{
+  margin-bottom:10px;
+}
+
+.review{
+  border: 1px solid black;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+
+
